display random advertise,set image width,height, landscape, etc..

--- a/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/META-INF/resources/css/photo-exh-display.css
+++ b/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/META-INF/resources/css/photo-exh-display.css
@@ -1,4 +1,21 @@
 .photo-exhb-display-container .photo-exhb-display-body .photo-exhb-display-table {border-spacing: 10px;border-collapse: separate;}
-.photo-exhb-display-container .photo-exhb-display-body .photo-exhb-display-table tr { height:170px;}
-.photo-exhb-display-container .photo-exhb-display-body .photo-exhb-display-table tr td.child-cell {width: 15%;}
-.photo-exhb-display-container .photo-exhb-display-body .photo-exhb-display-table tr td.common-cell {background:yello;border: 1px solid #d4d4d4;}
+/* .photo-exhb-display-container .photo-exhb-display-body .photo-exhb-display-table tr { height:170px;}
+.photo-exhb-display-container .photo-exhb-display-body .photo-exhb-display-table tr td.child-cell {width: 15%;} 
+
+.photo-exhb-display-container .photo-exhb-display-body .photo-exhb-display-table tr td.child-cell {
+	position:relative;
+}
+*/
+.photo-exhb-display-container .photo-exhb-display-body .photo-exhb-display-table tr td.child-cell .child-details-wrapper {
+    background: #fff;
+    bottom: 0;
+    left:0;
+    right:0;
+    padding:5px;
+}
+
+.photo-exhb-display-container .photo-exhb-display-body .photo-exhb-display-table tr td.child-cell .child-details-wrapper .child-details {
+    margin-left: 5px;
+}
+    
+.photo-exhb-display-container .photo-exhb-display-body .photo-exhb-display-table tr td.common-cell {border: 1px solid #d4d4d4;}
