Change UI and added no of total likes within heart image

--- a/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/META-INF/resources/css/photo-exh-display.css
+++ b/Photo-exhibition-workspace/modules/photo-exhibition-portlet/src/main/resources/META-INF/resources/css/photo-exh-display.css
@@ -12,6 +12,7 @@
     left:0;
     right:0;
     padding:5px;
+    font-size:12px;
 }
 
 .photo-exhb-display-container .photo-exhb-display-body .photo-exhb-display-table tr td.child-cell .child-details-wrapper .child-details {
